# physics-auditor

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: benchmark_pocket_clashscore.py  run_causality_decomposition.py  run_divergence.py  run_pfdhodh_vs_hsdhodh_selectivity.py  run_selectivity_map.py
benchmark/results/: pocket_clashscore_comparison.json
benchmark/results/causality/: CAUSALITY_FINDINGS.md  CoV2Mpro_causality.json  HsAromatase_causality.json  HsDHODH_causality.json  HsHDAC8_causality.json  LmPTR1_causality.json  SmDHODH_causality.json  TOPOLOGY_FIXES.md  causality_summary.csv
benchmark/results/divergence/: summary.json
benchmark/results/selectivity_maps/: HsDHODH_vs_HsDHFR_pocket_attribution.json  PFDHODH_SELECTIVITY_FINDINGS.md  PfDHODH_vs_HsDHODH_selectivity.json  SELECTIVITY_FINDINGS.md  SmDHODH_vs_HsDHODH.json
manuscript/: preprint.md
src/physics_auditor/: __init__.py  cli.py  config.py
src/physics_auditor/causality/: __init__.py  binding_site.py  divergence.py  energy_decomp.py  selectivity_map.py
src/physics_auditor/checks/: __init__.py  clashes.py
src/physics_auditor/core/: __init__.py  energy.py  geometry.py  parser.py  topology.py
src/physics_auditor/reference/: __init__.py
src/physics_auditor/report/: __init__.py
src/physics_auditor/utils/: __init__.py  (+1 more)
tests/: test_causality.py  test_disulfide.py  test_divergence.py  test_energy.py  test_energy_decomp.py  test_geometry.py  test_parser.py  test_pdb_provenance.py  test_regressions.py  test_selectivity_map.py  test_topology.py
