[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physics-auditor"
version = "0.1.0"
description = "Physics validation and mechanistic explanation for AI-generated protein structures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel Ngabonziza", email = "ngabondanny@gmail.com"},
]
keywords = [
    "protein-structure",
    "physics-validation",
    "drug-design",
    "structural-biology",
    "alphafold",
    "boltz",
    "selectivity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "typer>=0.9",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
physics-auditor = "physics_auditor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_auditor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
